<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyleCustom"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/login_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textColor="@color/orange" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/container_layout_margin">


        <!--<TextView-->
        <!--android:id="@+id/login_welcome_msg"-->
        <!--style="@style/LabelStyle"-->
        <!--android:layout_marginTop="@dimen/layout_in_between_margins"-->
        <!--android:text="@string/login_welcome_txt" />-->

        <EditText
            android:id="@+id/et_username"
            style="@style/EditTextStyle"
            android:layout_marginTop="80dp"
            android:hint="@string/email_address_hint"
            android:inputType="text" />



        <RelativeLayout
            android:id="@+id/pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="@dimen/layout_in_between_margins">

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/pwd_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_eye"
                android:layout_marginEnd="12dp" />

        </RelativeLayout>




        <TextView
            android:id="@+id/forgot_password"
            style="@style/LabelStyle"
            android:layout_below="@id/pwd_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/forgot_password"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/login_btn_label"
            android:textColor="@color/white" />


        <RelativeLayout
            android:id="@+id/sign_up_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/no_account"
                style="@style/LabelStyle"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/no_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_up"
                style="@style/LabelStyle"
                android:layout_toEndOf="@id/no_account"
                android:layout_toRightOf="@id/no_account"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="signup"
                android:text="@string/signup_label"
                android:textColor="@color/orange"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>

